# KinoPoisk

./: .dockerignore  .gitignore  Dockerfile  LICENCE  README.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt  run.sh
apps/: 1.html
apps/abstracts/: models.py
apps/accounts/: forms.py  models.py  urls.py  views.py
apps/accounts/templates/: base.html  home.html  login.html  navbar.html  profile.html  register.html
apps/movies/: admin.py  models.py  serializers.py  urls.py  views.py
apps/movies/migrations/: 0001_initial.py
backend/: manage.py  pyproject.toml
backend/apps/abstracts/: apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/apps/accounts/: admin.py  apps.py  managers.py  models.py  permissions.py  serializers.py  serializers_requests.py  serializers_responses.py  tests.py  urls.py  views.py
backend/apps/movies/: admin.py  apps.py  models.py  pagination.py  serializers.py  serializers_requests.py  serializers_responses.py  tests.py  urls.py  views.py
backend/core/: exceptions.py
backend/kinopoisk_django.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/settings/: asgi.py  base.py  conf.py  urls.py  wsgi.py
backend/settings/env/: local.py  prod.py
dockerfiles/: backend.Dockerfile  frontend.Dockerfile
docs/: README.md
frontend/: .env.example  README.md  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/: App.css  App.tsx  index.css
frontend/src/constants/: genres.ts  (+4 more)
settings/: asgi.py  base.py  conf.py  urls.py
settings/env/: prod.py
(+75 files in other folders)
